# MinioK8sBuckets

./: .drone.yml  404.html  Cargo.toml  Dockerfile  README.md  build_docker_image.sh  index.html  mkdocs.yml  renovate.json
DevelopmentSetup/: index.html
crd/: minio-bucket.yaml
docs/: DevelopmentSetup.md  README.md
search/: search_index.json
src/: constants.rs  crd.rs  lib.rs  main.rs  minio.rs  minio_test_server.rs  policy_template.json  secrets.rs  temp.rs  utils.rs
test/: first-test.yaml  second-bucket.yaml  test-inside-cluster.yaml  test-outside-cluster.yaml  test-policy1.json  test-policy2.json
yaml/: crd.yaml  deployment.yaml  minio-dev-deployment.yml  minio-instance.yaml  service_account.yaml
