[package]
name = "minio-operator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.29"
env_logger = "0.11.8"
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
schemars = "1.2.0"
tokio = { version = "1.48.0", features = ["full"] }
kube = { version = "2.0.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.26.1", features = ["v1_31"] }
futures = "0.3.31"
thiserror = "2.0.17"
rand = "0.9.2"
mktemp = "0.5.1"
reqwest = "0.13.1"
